# openapi.yml
@@ -257,3 +257,43 @@ paths:
           description: Invalid post id
       security:
         - cookieAuth: []
+  /stat/{postId}:
+    get:
+      summary: Get likes and views by post id
+      parameters:
+        - name: postId
+          in: path
+          description: post id
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Successful operation
+        '400':
+          description: Invalid post id
+      security:
+        - cookieAuth: []
+  /stat/top5posts:
+    get:
+      summary: Get top 5 posts by likes or views
+      parameters:
+        - name: orderBy
+          in: query
+          description: "likes" or "views"
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful operation
+      security:
+        - cookieAuth: []
+  /stat/top3users:
+    get:
+      summary: Get top 3 users by likes
+      responses:
+        '200':
+          description: Successful operation
+      security:
+        - cookieAuth: []
